# lukit

./: .gitignore  MANIFEST.in  README.md  Tutorial.md  __init__.py  begin.sh  lukit_eigenscore.jsonl  lukit_eigenscore_metrics.json  lukit_jsonl_all_aug.jsonl  lukit_jsonl_all_metrics_aug.json  lukit_judged_qwen.jsonl  lukit_judged_qwen_metrics.json  metrics11.json  metrics_graph4_plus_semantic_entropy_gpu2_3.json  metrics_lukit.json  pyproject.toml  requirements.txt  results_graph4_plus_semantic_entropy_gpu2_3.jsonl  results_lukit.jsonl  setup.py
augmented_benchmark/: chinese_simpleqa.jsonl
backends/: base_backend.py  hf_backend.py
cli/: __init__.py  main_handler.py
data_providers/: __init__.py  hidden_states_provider.py  prompt_provider.py  sampled_texts_provider.py  similarity_matrix_provider.py
engine/: __init__.py  execution_engine.py
lukit/: __init__.py  progress.py
lukit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lukit/backends/: README.md  __init__.py  base_backend.py  hf_backend.py
lukit/cli/: README.md  __init__.py  eval_config.py  main.py  main_handler.py
lukit/configs/: chat_template.json
lukit/data_providers/: README.md  __init__.py  base_provider.py  generation_provider.py  log_probs_provider.py  sampled_texts_provider.py
lukit/engine/: README.md  dependency_resolver.py  execution_engine.py
lukit/methods/: README.md  __init__.py  deg_mat.py  eccentricity.py  eig_val_laplacian.py  mean_token_entropy.py  num_sem_sets.py  p_true.py  semantic_class_utils.py  semantic_entropy.py  semantic_entropy_empirical.py  semantic_graph_utils.py  sequence_log_probability.py
lukit/visualization/: README.md  __init__.py
methods/: __init__.py  base_method.py  degree.py  eccentricity.py  eigenscore.py  eigvalue.py  lexical_similarity.py  monte_carlo_sequence_entropy.py  numset.py  perplexity.py  self_certainty.py
outputs/: sequence_log_probability_self_certainty_100.jsonl  sequence_log_probability_self_certainty_100_metrics.json
paper_assets/: uq_full_metrics.tex  uq_results.tex
scripts/: run_lukit.py  test_api.py
