[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lukit"
version = "0.1.0"
description = "LLM Uncertainty Kit - A toolkit for evaluating uncertainty in LLM responses"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "LUKIT Contributors", email = "lukit@baidu.com"},
]
keywords = ["llm", "uncertainty", "uq", "evaluation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=4.0.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
all = [
    "lukit[torch,dev]",
]

[project.urls]
Homepage = "https://github.com/baidu/lukit"
Documentation = "https://github.com/baidu/lukit/blob/main/README.md"
Repository = "https://github.com/baidu/lukit"
Issues = "https://github.com/baidu/lukit/issues"

[project.scripts]
lukit = "lukit.cli.main:main"
lukit-eval = "lukit.bin.evaluate:main"
lukit-leaderboard = "lukit.bin.leaderboard:main"
lukit-visualize = "lukit.bin.visualize:main"

[tool.setuptools.packages.find]
include = ["lukit", "lukit.*"]

[tool.setuptools.package-data]
lukit = ["configs/*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
